--- a/tex/desenvolvimento.tex
+++ b/tex/desenvolvimento.tex
@@ -134,7 +134,7 @@ A operação de abertura realiza a erosão seguida de dilatação, resultando na
 
 \begin{figure}[H]
 \centering
-    \caption{\label{img:morph_op} Operações morfológicas aplciadas na letra "j" (a) Abertura (b) Fechamento.}
+    \caption{\label{img:morph_op} Operações morfológicas aplicadas na letra "j" (a) Abertura (b) Fechamento.}
     \subcaptionbox{}{\includegraphics[scale=0.6]{img/opening.png}}
     \subcaptionbox{}{\includegraphics[scale=0.6]{img/closing.png}}
     \legend{\textbf{Fonte: } (OpenCV, 2019).}
