--- a/tex/pretextual.tex
+++ b/tex/pretextual.tex
@@ -154,11 +154,11 @@
 %--------------------------------------------------------------------------------
 % Seção de agradecimentos
 %--------------------------------------------------------------------------------
-\begin{agradecimentos}
+% \begin{agradecimentos}
 	
-\lipsum[2-4]
+% \lipsum[2-4]
 
-\end{agradecimentos}
+% \end{agradecimentos}
 
 %--------------------------------------------------------------------------------
 % Insere a segunda epígrafe
