--- a/tex/refs.tex
+++ b/tex/refs.tex
@@ -45,7 +45,7 @@
 \noindent DUARTE FILHO, J. et al. Aspectos do florescimento e técnicas empregadas objetivando a produção precoce em morangueiros. \textit{Informe Agropecuário}, v. 20, n. 198, p. 30-35, 1999. 
 \\
 
-\noindent EMBRAPA SEMIÁRIDO. \textit{Cultivo da mangueira}. Petrolina, 2002. Disponível em: <https://ainfo.cnptia.embrapa.br>. Acesso em: 08 ago. 2018.
+\noindent EMBRAPA SEMIÁRIDO. \textit{Cultivo da mangueira}. Petrolina, 2002. Disponível em: \\ <https://ainfo.cnptia.embrapa.br>. Acesso em: 08 ago. 2018.
 \\
 
 \noindent ENVI - Guia do ENVI em Português. Sulsoft, 2000. Diponível em: <www.sulsoft.com.br>. Acesso em: 17 jul. 2018.
@@ -151,6 +151,9 @@
 \\
 
 \noindent SONKA, M.; HLAVAC, V.; BOYLE, R. \textit{Image processing, analysis, and machine vision}. Cengage Learning, 2014.
+\\
+
+\noindent SRIRAAM, N. Correlation dimension based lossless compression of EEG signals. Biomedical Signal Processing and Control, v. 7, n. 4, p. 379-388, 2012.
 \\
 
 \noindent TEOH, C. C.; SYAIFUDIN, A. R. M. Image processing and analysis techniques for estimating weight of Chokanan mangoes. \textit{Journal of Tropical Agriculture and Food Science}, v. 35, n. 1, p. 183, 2007. Disponível em: <http://ejtafs.mardi.gov.my/jtafs/35-1/Chokanan\%20mangoes.pdf>. Acesso em: 11 jun. 2018.
